internal/translator/testdata/multiple-upstreams/output.yaml
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: multiple-upstreams
  namespace: default
spec:
  routes:
  - conditions:
    - prefix: /
    services:
    - name: s1
      port: 80
    - name: s2
      port: 80
  virtualhost:
    fqdn: multi.bar.com
